force-app/main/default/objects/Contact/fields/CC4i_RUT__c.field-meta.xml
<CustomField>
    <fullName>CC4i_RUT__c</fullName>
    <inlineHelpText>Formato RUT: 99999999-9</inlineHelpText>
    <label>RUT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>