force-app/main/default/objects/Contact/fields/et4ae5_HasOptedOutOfMobile__c.field-meta.xml
<CustomField>
    <fullName>et4ae5_HasOptedOutOfMobile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir mensajes en teléfono móvil</label>
    <type>Checkbox</type>
</CustomField>