force-app/main/default/objects/Contact/fields/FinServ__CountryOfBirth__c.field-meta.xml
<CustomField>
    <fullName>FinServ__CountryOfBirth__c</fullName>
    <label>Country Of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FinServ__Countries</valueSetName>
    </valueSet>
</CustomField>