force-app/main/default/objects/Contact/fields/FinServ__Facebook__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Facebook__c</fullName>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>