force-app/main/default/objects/Contact/fields/FinServ__FaxVerified__c.field-meta.xml
<CustomField>
    <fullName>FinServ__FaxVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax Verified</label>
    <type>Checkbox</type>
</CustomField>