force-app/main/default/objects/Contact/fields/FinServ__MobileVerified__c.field-meta.xml
<CustomField>
    <fullName>FinServ__MobileVerified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mobile Verified</label>
    <type>Checkbox</type>
</CustomField>