force-app/main/default/objects/Contact/fields/FinServ__Twitter__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Twitter__c</fullName>
    <label>Twitter</label>
    <type>Url</type>
</CustomField>