force-app/main/default/objects/Contact/fields/GLBP1_Es_persona_expuesta_politicamente__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Es_persona_expuesta_politicamente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es persona expuesta políticamente</label>
    <type>Checkbox</type>
</CustomField>