force-app/main/default/objects/Contact/fields/GLBP1_Rut_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Rut_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rut Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contactos (Cuenta)</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>