force-app/main/default/objects/Contact/fields/GLBP1_Telefono_comercial__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Telefono_comercial__c</fullName>
    <inlineHelpText>Nomenclatura:  &quot;+&quot; / Código país: &quot;xx&quot;/ Número:&quot;xxxxxxxxx&quot;</inlineHelpText>
    <label>Teléfono comercial</label>
    <type>Phone</type>
</CustomField>