force-app/main/default/objects/Contact/fields/ZRH_DVEjecutivoBroker__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DVEjecutivoBroker__c</fullName>
    <description>Dígito verificador de RUT del contacto</description>
    <formula>IF(LEN(CC4i_RUT__c) = 10,

IF(11 - MOD(
VALUE(MID(CC4i_RUT__c, 8, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 7, 1)) * 3 +
VALUE(MID(CC4i_RUT__c, 6, 1)) * 4 +
VALUE(MID(CC4i_RUT__c, 5, 1)) * 5 +
VALUE(MID(CC4i_RUT__c, 4, 1)) * 6 +
VALUE(MID(CC4i_RUT__c, 3, 1)) * 7 +
VALUE(MID(CC4i_RUT__c, 2, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 1, 1)) * 3 , 11) = 10 , &quot;K&quot;,
IF(11 - MOD(
VALUE(MID(CC4i_RUT__c, 8, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 7, 1)) * 3 +
VALUE(MID(CC4i_RUT__c, 6, 1)) * 4 +
VALUE(MID(CC4i_RUT__c, 5, 1)) * 5 +
VALUE(MID(CC4i_RUT__c, 4, 1)) * 6 +
VALUE(MID(CC4i_RUT__c, 3, 1)) * 7 +
VALUE(MID(CC4i_RUT__c, 2, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 1, 1)) * 3 , 11) = 11 , &quot;0&quot;,
TEXT(11 - MOD(
VALUE(MID(CC4i_RUT__c, 8, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 7, 1)) * 3 +
VALUE(MID(CC4i_RUT__c, 6, 1)) * 4 +
VALUE(MID(CC4i_RUT__c, 5, 1)) * 5 +
VALUE(MID(CC4i_RUT__c, 4, 1)) * 6 +
VALUE(MID(CC4i_RUT__c, 3, 1)) * 7 +
VALUE(MID(CC4i_RUT__c, 2, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 1, 1)) * 3 , 11)))),

IF(11 - MOD(
VALUE(MID(CC4i_RUT__c, 7, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 6, 1)) * 3 +
VALUE(MID(CC4i_RUT__c, 5, 1)) * 4 +
VALUE(MID(CC4i_RUT__c, 4, 1)) * 5 +
VALUE(MID(CC4i_RUT__c, 3, 1)) * 6 +
VALUE(MID(CC4i_RUT__c, 2, 1)) * 7 +
VALUE(MID(CC4i_RUT__c, 1, 1)) * 2 , 11) = 10 , &quot;K&quot;,
IF(11 - MOD(
VALUE(MID(CC4i_RUT__c, 7, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 6, 1)) * 3 +
VALUE(MID(CC4i_RUT__c, 5, 1)) * 4 +
VALUE(MID(CC4i_RUT__c, 4, 1)) * 5 +
VALUE(MID(CC4i_RUT__c, 3, 1)) * 6 +
VALUE(MID(CC4i_RUT__c, 2, 1)) * 7 +
VALUE(MID(CC4i_RUT__c, 1, 1)) * 2 , 11) = 11 , &quot;0&quot;,
TEXT(11 - MOD(
VALUE(MID(CC4i_RUT__c, 7, 1)) * 2 +
VALUE(MID(CC4i_RUT__c, 6, 1)) * 3 +
VALUE(MID(CC4i_RUT__c, 5, 1)) * 4 +
VALUE(MID(CC4i_RUT__c, 4, 1)) * 5 +
VALUE(MID(CC4i_RUT__c, 3, 1)) * 6 +
VALUE(MID(CC4i_RUT__c, 2, 1)) * 7 +
VALUE(MID(CC4i_RUT__c, 1, 1)) * 2 , 11)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV</label>
    <type>Text</type>
</CustomField>