force-app/main/default/objects/Contact/fields/ZRH_NivelEscolaridad__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NivelEscolaridad__c</fullName>
    <label>Nivel de escolaridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>SIN NIVEL ESCOLARIDAD</label>
            </value>
            <value>
                <fullName>PK</fullName>
                <label>PRE KINDER</label>
            </value>
            <value>
                <fullName>KI</fullName>
                <label>KINDER</label>
            </value>
            <value>
                <fullName>1B</fullName>
                <label>PRIMERO BASICO</label>
            </value>
            <value>
                <fullName>2B</fullName>
                <label>SEGUNDO BASICO</label>
            </value>
            <value>
                <fullName>3B</fullName>
                <label>TERCERO BASICO</label>
            </value>
            <value>
                <fullName>4B</fullName>
                <label>CUARTO BASICO</label>
            </value>
            <value>
                <fullName>5B</fullName>
                <label>QUINTO BASICO</label>
            </value>
            <value>
                <fullName>6B</fullName>
                <label>SEXTO BASICO</label>
            </value>
            <value>
                <fullName>7B</fullName>
                <label>SEPTIMO BASICO</label>
            </value>
            <value>
                <fullName>8B</fullName>
                <label>OCTAVO BASICO</label>
            </value>
            <value>
                <fullName>1M</fullName>
                <label>PRIMERO MEDIO</label>
            </value>
            <value>
                <fullName>2M</fullName>
                <label>SEGUNDO MEDIO</label>
            </value>
            <value>
                <fullName>3M</fullName>
                <label>TERCERO MEDIO</label>
            </value>
            <value>
                <fullName>4M</fullName>
                <label>CUARTO MEDIO</label>
            </value>
            <value>
                <fullName>1S</fullName>
                <label>PRIMERO TEC-SUPERIOR 5 AÑOS</label>
            </value>
            <value>
                <fullName>2S</fullName>
                <label>SEGUNDO TEC-SUPERIOR 5 AÑOS</label>
            </value>
            <value>
                <fullName>3S</fullName>
                <label>TERCERO TEC-SUPERIOR 5 AÑOS</label>
            </value>
            <value>
                <fullName>4S</fullName>
                <label>CUARTO TEC-SUPERIOR 5 AÑOS</label>
            </value>
            <value>
                <fullName>5S</fullName>
                <label>QUINTO TEC-SUPERIOR 5 AÑOS</label>
            </value>
            <value>
                <fullName>1Z</fullName>
                <label>PRIMERO SUPERIOR 6 AÑOS</label>
            </value>
            <value>
                <fullName>2Z</fullName>
                <label>SEGUNDO SUPERIOR 6 AÑOS</label>
            </value>
            <value>
                <fullName>3Z</fullName>
                <label>TERCERO SUPERIOR 6 AÑOS</label>
            </value>
            <value>
                <fullName>4Z</fullName>
                <label>CUARTO SUPERIOR 6 AÑOS</label>
            </value>
            <value>
                <fullName>5Z</fullName>
                <label>QUINTO SUPERIOR 6 AÑOS</label>
            </value>
            <value>
                <fullName>6Z</fullName>
                <label>SEXTO SUPERIOR 6 AÑOS</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>PRIMERO SUPERIOR 7 AÑOS</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>SEGUNDO SUPERIOR 7 AÑOS</label>
            </value>
            <value>
                <fullName>37</fullName>
                <label>TERCERO SUPERIOR 7 AÑOS</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>CUARTO SUPERIOR 7 AÑOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>