force-app/main/default/objects/Contact/fields/ZRH_TipoRelacion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoRelacion__c</fullName>
    <description>Campo para tipificar el cargo del contacto cliente</description>
    <label>Tipo Relación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gerente RRHH</fullName>
            </value>
            <value>
                <fullName>Encargado de Remuneraciones RRHH</fullName>
            </value>
            <value>
                <fullName>Analista/Ejecutivo RRHH</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>