force-app/main/default/objects/Contact/recordTypes/Personal.recordType-meta.xml
<RecordType>
    <fullName>Personal</fullName>
    <active>true</active>
    <description>Tipo de contacto para personas</description>
    <label>Personal</label>
</RecordType>