force-app/main/default/objects/Contact/recordTypes/vlocity_ins__Producer.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Producer</fullName>
    <active>true</active>
    <label>Producer</label>
    <!---->
</RecordType>