force-app/main/default/objects/Contact/recordTypes/vlocity_ins__Provider.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__Provider</fullName>
    <active>true</active>
    <label>Provider</label>
    <!---->
</RecordType>