force-app/main/default/objects/Contact/validationRules/CC4I_Validacion_rut_de_contacto.validationRule-meta.xml
<ValidationRule>
    <fullName>CC4I_Validacion_rut_de_contacto</fullName>
    <active>true</active>
    <errorConditionFormula>IF(NOT(ISBLANK(CC4i_RUT__c)),IF(REGEX(CC4i_RUT__c,&quot;[0-9]{1,8}-[Kk0-9]&quot;),IF(LEN(CC4i_RUT__c)=10,11-MOD(VALUE(MID(CC4i_RUT__c,8,1))*2+VALUE(MID(CC4i_RUT__c,
7,1))*3+VALUE(MID(CC4i_RUT__c,6,1))*4+VALUE(MID(CC4i_RUT__c,5,1))*5+VALUE(MID(CC4i_RUT__c,4,1))*6+VALUE(MID(CC4i_RUT__c,3,1))*7+VALUE(MID(CC4i_RUT__c,2,
1))*2+VALUE(MID(CC4i_RUT__c,1,1))*3,11),IF(LEN(CC4i_RUT__c)=9,11-MOD(VALUE(MID(CC4i_RUT__c,7,1))*2+VALUE(MID(CC4i_RUT__c,6,1))*3+VALUE(MID(CC4i_RUT__c,5,
1))*4+VALUE(MID(CC4i_RUT__c,4,1))*5+VALUE(MID(CC4i_RUT__c,3,1))*6+VALUE(MID(CC4i_RUT__c,2,1))*7+VALUE(MID(CC4i_RUT__c,1,1))*2,11),IF(LEN(CC4i_RUT__c)=8,
11-MOD(VALUE(MID(CC4i_RUT__c,6,1))*2+VALUE(MID(CC4i_RUT__c,5,1))*3+VALUE(MID(CC4i_RUT__c,4,1))*4+VALUE(MID(CC4i_RUT__c,3,1))*5+VALUE(MID(CC4i_RUT__c,2,
1))*6+VALUE(MID(CC4i_RUT__c,1,1))*7,11),IF(LEN(CC4i_RUT__c)=7,11-MOD(VALUE(MID(CC4i_RUT__c,5,1))*2+VALUE(MID(CC4i_RUT__c,4,1))*3+VALUE(MID(CC4i_RUT__c,
3,1))*4+VALUE(MID(CC4i_RUT__c,2,1))*5+VALUE(MID(CC4i_RUT__c,1,1))*6,11),IF(LEN(CC4i_RUT__c)=6,11-MOD(VALUE(MID(CC4i_RUT__c,4,1))*2+VALUE(MID(CC4i_RUT__c,
3,1))*3+VALUE(MID(CC4i_RUT__c,2,1))*4+VALUE(MID(CC4i_RUT__c,1,1))*5,11),IF(LEN(CC4i_RUT__c)=5,11-MOD(VALUE(MID(CC4i_RUT__c,3,1))*2+VALUE(MID(CC4i_RUT__c,
2,1))*3+VALUE(MID(CC4i_RUT__c,1,1))*4,11),IF(LEN(CC4i_RUT__c)=4,11-MOD(VALUE(MID(CC4i_RUT__c,2,1))*2+VALUE(MID(CC4i_RUT__c,1,1))*3,11),IF(LEN(CC4i_RUT__c)=3,
11-MOD(VALUE(MID(CC4i_RUT__c,1,1))*2,11),1))))))))&lt;&gt;IF(LEN(CC4i_RUT__c)=10,CASE(MID(CC4i_RUT__c,10,1),&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,
5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,9,0),IF(LEN(CC4i_RUT__c)=9,CASE(MID(CC4i_RUT__c,9,1),&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,
9,0),IF(LEN(CC4i_RUT__c)=8,CASE(MID(CC4i_RUT__c,8,1),&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,9,0),IF(LEN(CC4i_RUT__c)=7,
CASE(MID(CC4i_RUT__c,7,1),&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,9,0),IF(LEN(CC4i_RUT__c)=6,CASE(MID(CC4i_RUT__c,6,1),
&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,9,0),IF(LEN(CC4i_RUT__c)=5,CASE(MID(CC4i_RUT__c,5,1),&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,
1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,9,0),IF(LEN(CC4i_RUT__c)=4,CASE(MID(CC4i_RUT__c,4,1),&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,
5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,9,0),IF(LEN(CC4i_RUT__c)=3,CASE(MID(CC4i_RUT__c,3,1),&apos;k&apos;,10,&apos;K&apos;,10,&apos;0&apos;,11,&apos;1&apos;,1,&apos;2&apos;,2,&apos;3&apos;,3,&apos;4&apos;,4,&apos;5&apos;,5,&apos;6&apos;,6,&apos;7&apos;,7,&apos;8&apos;,8,&apos;9&apos;,
9,0),2)))))))),TRUE),FALSE)</errorConditionFormula>
    <errorMessage>Por favor ingresar un RUT válido.</errorMessage>
</ValidationRule>