force-app/main/default/objects/Contact/validationRules/GLB_P1_Telefono12Digitos.validationRule-meta.xml
<ValidationRule>
    <fullName>GLB_P1_Telefono12Digitos</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Phone)),
    LEN(Phone) &lt;&gt; 12
)</errorConditionFormula>
    <errorMessage>Debe tener 12 dígitos con la siguiente nomenclatura: &quot;+&quot; / Código país: &quot;xx&quot;/ Número:&quot;xxxxxxxxx&quot;</errorMessage>
</ValidationRule>