force-app/main/default/objects/Contact/validationRules/ZRH_ValidacionNombreVacio.validationRule-meta.xml
<ValidationRule>
    <fullName>ZRH_ValidacionNombreVacio</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Campo obligatorio.</errorMessage>
</ValidationRule>